[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/GUI/Sprites/PXUI-Basic/panel_Example1.png" type="Texture" id=1]
[ext_resource path="res://Assets/GUI/Scripts/Clase.gd" type="Script" id=2]
[ext_resource path="res://Assets/GUI/Sprites/PXUI-Basic/arrow_example.png" type="Texture" id=3]
[ext_resource path="res://Assets/Personajes/NPCs/Sprites/Novel/Miho Base Pack/Miho Winter Uniform/Miho_WinterUni_Open_Blush.png" type="Texture" id=4]
[ext_resource path="res://Assets/Personajes/Prota/Animaciones/Novel/boy a_casual_happy.png" type="Texture" id=5]
[ext_resource path="res://Assets/Personajes/NPCs/Sprites/Novel/reina/reina_normal.png" type="Texture" id=6]
[ext_resource path="res://Assets/Personajes/NPCs/Sprites/Novel/kieran-sprites/s1-normal2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Personajes/NPCs/Sprites/Novel/Fondo/Classroom_Day.png" type="Texture" id=8]
[ext_resource path="res://Assets/GUI/Sonidos/Fondo Historia.mp3" type="AudioStream" id=9]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/GUI/Fonts/NokiaCellphoneFC.ttf"

[sub_resource type="DynamicFont" id=2]
size = 15
extra_spacing_bottom = -5
font_data = SubResource( 5 )

[sub_resource type="Animation" id=3]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 312, 201 ), Vector2( 312, 203 ), Vector2( 312, 201 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 336, 173 ) ]
}

[node name="Clase" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -160, -16 )
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0
autoplay = true

[node name="Fondo" type="Sprite" parent="."]
position = Vector2( 192, 108 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[node name="Prota" type="Sprite" parent="."]
position = Vector2( 116, 132 )
scale = Vector2( 0.064, 0.0466667 )
texture = ExtResource( 5 )
flip_h = true

[node name="NPC1" type="Sprite" parent="."]
position = Vector2( 207, 123 )
scale = Vector2( 0.0302887, 0.0163721 )
texture = ExtResource( 4 )

[node name="NPC2" type="Sprite" parent="."]
position = Vector2( 272, 99.5 )
scale = Vector2( 0.042, 0.03 )
texture = ExtResource( 6 )

[node name="NPC3" type="Sprite" parent="."]
position = Vector2( 345.5, 140 )
scale = Vector2( 0.0801249, 0.0735365 )
texture = ExtResource( 7 )

[node name="Control" type="Control" parent="."]

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_left = 32.0
margin_top = 147.0
margin_right = 352.0
margin_bottom = 231.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
margin_left = 64.0
margin_top = 171.0
margin_right = 294.0
margin_bottom = 208.0
custom_colors/default_color = Color( 0.392157, 0.301961, 0.254902, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Text"
text = "Text"

[node name="Tween" type="Tween" parent="Control"]

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 336, 173 )
rotation = 1.5708
scale = Vector2( 0.187351, 0.172652 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Sprite"]
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )

[connection signal="tween_completed" from="Control/Tween" to="." method="_on_Tween_tween_completed"]
